--- a/index.html
+++ b/index.html
@@ -278,6 +278,9 @@
       { id: 60, name: 'Espresso', category: 'Other', fat: 0.2, sugar: 0, msnf: 0, fiber: 0, water: 98 },
       { id: 61, name: 'Matcha Powder', category: 'Other', fat: 5, sugar: 0, msnf: 0, fiber: 38, water: 10 },
       { id: 62, name: 'Caramel Sauce', category: 'Other', fat: 8, sugar: 55, msnf: 2, fiber: 0, water: 35 },
+      { id: 64, name: 'Apple Cider (Fresh)', category: 'Fruit', fat: 0, sugar: 11, msnf: 0, fiber: 0.2, water: 88 },
+      { id: 65, name: 'Tara Gum', category: 'Stabilizer', fat: 0, sugar: 0, msnf: 0, fiber: 80, water: 0 },
+      { id: 66, name: 'Lemon Zest', category: 'Fruit', fat: 0.3, sugar: 5, msnf: 0, fiber: 10, water: 80 },
     ];
     
     // Pre-loaded recipes
@@ -320,6 +323,22 @@
         { ingredientId: 1, amount: 2597.4 }, { ingredientId: 3, amount: 479.52 }, { ingredientId: 5, amount: 179.82 },
         { ingredientId: 10, amount: 579.42 }, { ingredientId: 12, amount: 139.86 }, { ingredientId: 20, amount: 7.99 },
         { ingredientId: 56, amount: 15.98 }
+      ]},
+      { id: '9', name: 'Apple Cider Sorbet', type: 'sorbet', batchSize: 4000, ingredients: [
+        { ingredientId: 64, amount: 2400 }, { ingredientId: 10, amount: 480 }, { ingredientId: 11, amount: 200 },
+        { ingredientId: 12, amount: 100 }, { ingredientId: 15, amount: 200 }, { ingredientId: 21, amount: 20 },
+        { ingredientId: 52, amount: 600 }
+      ]},
+      { id: '10', name: 'Lemon Olive Oil Gelato', type: 'gelato', batchSize: 4213, ingredients: [
+        { ingredientId: 1, amount: 1600 }, { ingredientId: 3, amount: 400 }, { ingredientId: 5, amount: 180 },
+        { ingredientId: 10, amount: 560 }, { ingredientId: 12, amount: 300 }, { ingredientId: 11, amount: 200 },
+        { ingredientId: 65, amount: 13.5 }, { ingredientId: 54, amount: 160 }, { ingredientId: 52, amount: 700 },
+        { ingredientId: 66, amount: 100 }
+      ]},
+      { id: '11', name: 'Fior di Latte', type: 'gelato', batchSize: 4000, ingredients: [
+        { ingredientId: 1, amount: 2220 }, { ingredientId: 3, amount: 800 }, { ingredientId: 10, amount: 560 },
+        { ingredientId: 12, amount: 140 }, { ingredientId: 11, amount: 80 }, { ingredientId: 5, amount: 180 },
+        { ingredientId: 20, amount: 20 }
       ]}
     ];
     
