--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
       { id: 34, name: 'Nielsen Massey Vanilla Paste', fat: 0, sugar: 63, msnf: 0, fiber: 0, pac: 63, pod: 0, category: 'other' },
       { id: 35, name: 'Instant Coffee', fat: 0.2, sugar: 3.1, msnf: 0, fiber: 34.1, pac: 3, pod: 0, category: 'other' },
       { id: 36, name: 'Espresso', fat: 0.2, sugar: 0, msnf: 0, fiber: 0, pac: 0, pod: 0, category: 'other' },
+      { id: 37, name: 'Espresso Beans (Ground)', fat: 11, sugar: 0, msnf: 0, fiber: 35, pac: 0, pod: 0, category: 'other' },
       // FATS
       { id: 40, name: 'Coconut Oil', fat: 100, sugar: 0, msnf: 0, fiber: 0, pac: 0, pod: 0, category: 'fats' },
       { id: 41, name: 'Extra Virgin Olive Oil', fat: 100, sugar: 0, msnf: 0, fiber: 0, pac: 0, pod: 0, category: 'fats' },
