--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
   <div id="root"></div>
   <script type="text/babel">
     const { useState, useEffect, useMemo } = React;
-    const APP_VERSION = '5.3.0', BUILD_DATE = '2026-01-16-D', CORRECT_PIN = '0119';
+    const APP_VERSION = '5.3.0', BUILD_DATE = '2026-01-16-E', CORRECT_PIN = '0119';
     
     const INGREDIENT_DB = [
       { id: 1, name: 'Whole Milk 3.6%', fat: 3.6, sugar: 4.8, msnf: 8.9, fiber: 0, pac: 4.8, pod: 16, category: 'dairy' },
@@ -265,7 +265,7 @@
       { id: 113, name: 'Morello Cherry Gelato TEST', type: 'gelato', items: [{ ingredientId: 85, amount: 1000 }, { ingredientId: 1, amount: 1500 }, { ingredientId: 3, amount: 700 }, { ingredientId: 10, amount: 420 }, { ingredientId: 11, amount: 160 }, { ingredientId: 12, amount: 220 }, { ingredientId: 5, amount: 140 }, { ingredientId: 15, amount: 40 }, { ingredientId: 20, amount: 8 }, { ingredientId: 21, amount: 5 }, { ingredientId: 23, amount: 2 }] },
       { id: 114, name: 'Pistachio Gelato TEST', type: 'gelato', items: [{ ingredientId: 86, amount: 400 }, { ingredientId: 1, amount: 2000 }, { ingredientId: 3, amount: 320 }, { ingredientId: 10, amount: 420 }, { ingredientId: 11, amount: 140 }, { ingredientId: 12, amount: 200 }, { ingredientId: 5, amount: 100 }, { ingredientId: 30, amount: 410 }, { ingredientId: 20, amount: 8 }, { ingredientId: 21, amount: 5 }, { ingredientId: 23, amount: 2 }] },
       { id: 115, name: 'Cranberry Lemon Sorbet TEST', type: 'sorbet', items: [{ ingredientId: 87, amount: 1400 }, { ingredientId: 88, amount: 200 }, { ingredientId: 89, amount: 8 }, { ingredientId: 10, amount: 700 }, { ingredientId: 11, amount: 180 }, { ingredientId: 12, amount: 300 }, { ingredientId: 30, amount: 1200 }, { ingredientId: 20, amount: 8 }, { ingredientId: 21, amount: 5 }, { ingredientId: 23, amount: 2 }] },
-      { id: 116, name: 'Guittard Semisweet Chocolate TEST', type: 'gelato', items: [{ ingredientId: 90, amount: 600 }, { ingredientId: 1, amount: 2000 }, { ingredientId: 3, amount: 400 }, { ingredientId: 10, amount: 450 }, { ingredientId: 11, amount: 140 }, { ingredientId: 12, amount: 220 }, { ingredientId: 5, amount: 100 }, { ingredientId: 50, amount: 55 }, { ingredientId: 20, amount: 8 }, { ingredientId: 21, amount: 5 }, { ingredientId: 23, amount: 2 }, { ingredientId: 30, amount: 20 }] },
+      { id: 116, name: 'Guittard Semisweet Chocolate TEST', type: 'gelato', items: [{ ingredientId: 90, amount: 450 }, { ingredientId: 1, amount: 2200 }, { ingredientId: 3, amount: 400 }, { ingredientId: 10, amount: 420 }, { ingredientId: 11, amount: 140 }, { ingredientId: 12, amount: 220 }, { ingredientId: 5, amount: 80 }, { ingredientId: 50, amount: 40 }, { ingredientId: 20, amount: 8 }, { ingredientId: 21, amount: 5 }, { ingredientId: 23, amount: 2 }, { ingredientId: 30, amount: 335 }] },
     ];
     
     const GELATO_TARGETS = { fat: { min: 6, max: 10, ideal: 9 }, sugar: { min: 22, max: 27, ideal: 25 }, msnf: { min: 7, max: 11, ideal: 9 }, solids: { min: 36, max: 42, ideal: 38 } };
