--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
   <div id="root"></div>
   <script type="text/babel">
     const { useState, useEffect, useMemo } = React;
-    const APP_VERSION = '5.3.0', BUILD_DATE = '2026-01-16-E', CORRECT_PIN = '0119';
+    const APP_VERSION = '5.4.0', BUILD_DATE = '2026-01-16-F', CORRECT_PIN = '0119';
     
     const INGREDIENT_DB = [
       { id: 1, name: 'Whole Milk 3.6%', fat: 3.6, sugar: 4.8, msnf: 8.9, fiber: 0, pac: 4.8, pod: 16, category: 'dairy' },
@@ -266,6 +266,7 @@
       { id: 114, name: 'Pistachio Gelato TEST', type: 'gelato', items: [{ ingredientId: 86, amount: 400 }, { ingredientId: 1, amount: 2000 }, { ingredientId: 3, amount: 320 }, { ingredientId: 10, amount: 420 }, { ingredientId: 11, amount: 140 }, { ingredientId: 12, amount: 200 }, { ingredientId: 5, amount: 100 }, { ingredientId: 30, amount: 410 }, { ingredientId: 20, amount: 8 }, { ingredientId: 21, amount: 5 }, { ingredientId: 23, amount: 2 }] },
       { id: 115, name: 'Cranberry Lemon Sorbet TEST', type: 'sorbet', items: [{ ingredientId: 87, amount: 1400 }, { ingredientId: 88, amount: 200 }, { ingredientId: 89, amount: 8 }, { ingredientId: 10, amount: 700 }, { ingredientId: 11, amount: 180 }, { ingredientId: 12, amount: 300 }, { ingredientId: 30, amount: 1200 }, { ingredientId: 20, amount: 8 }, { ingredientId: 21, amount: 5 }, { ingredientId: 23, amount: 2 }] },
       { id: 116, name: 'Guittard Semisweet Chocolate TEST', type: 'gelato', items: [{ ingredientId: 90, amount: 450 }, { ingredientId: 1, amount: 2200 }, { ingredientId: 3, amount: 400 }, { ingredientId: 10, amount: 420 }, { ingredientId: 11, amount: 140 }, { ingredientId: 12, amount: 220 }, { ingredientId: 5, amount: 80 }, { ingredientId: 50, amount: 40 }, { ingredientId: 20, amount: 8 }, { ingredientId: 21, amount: 5 }, { ingredientId: 23, amount: 2 }, { ingredientId: 30, amount: 335 }] },
+      { id: 117, name: 'Salted Caramel v2 TEST', type: 'gelato', items: [{ ingredientId: 1, amount: 2300 }, { ingredientId: 3, amount: 400 }, { ingredientId: 5, amount: 130 }, { ingredientId: 10, amount: 600 }, { ingredientId: 11, amount: 120 }, { ingredientId: 12, amount: 220 }, { ingredientId: 31, amount: 16 }, { ingredientId: 15, amount: 150 }, { ingredientId: 20, amount: 8 }, { ingredientId: 21, amount: 5 }, { ingredientId: 23, amount: 2 }] },
     ];
     
     const GELATO_TARGETS = { fat: { min: 6, max: 10, ideal: 9 }, sugar: { min: 22, max: 27, ideal: 25 }, msnf: { min: 7, max: 11, ideal: 9 }, solids: { min: 36, max: 42, ideal: 38 } };
@@ -298,9 +299,9 @@
       const [isAuth, setIsAuth] = useState(false); const [tab, setTab] = useState('recipes'); const [recipes, setRecipes] = useState([]); const [testRecipes, setTestRecipes] = useState([]); const [selected, setSelected] = useState(null); const [modal, setModal] = useState(null); const [toast, setToast] = useState(null); const [editing, setEditing] = useState(null);
       const [checkedIngredients, setCheckedIngredients] = useState(new Set());
       const [recipeSearch, setRecipeSearch] = useState(''); const [recipeFilter, setRecipeFilter] = useState('all'); const [ingSearch, setIngSearch] = useState(''); const [ingCategory, setIngCategory] = useState('all');
-      useEffect(() => { if (sessionStorage.getItem('gelato-auth') === 'true') setIsAuth(true); const saved = localStorage.getItem('gelato-recipes-v5.3'); const savedTest = localStorage.getItem('gelato-test-recipes-v5.3'); setRecipes(saved ? JSON.parse(saved) : DEFAULT_RECIPES); setTestRecipes(savedTest ? JSON.parse(savedTest) : DEFAULT_TEST_RECIPES); }, []);
-      useEffect(() => { if (recipes.length > 0) localStorage.setItem('gelato-recipes-v5.3', JSON.stringify(recipes)); }, [recipes]);
-      useEffect(() => { if (testRecipes.length > 0) localStorage.setItem('gelato-test-recipes-v5.3', JSON.stringify(testRecipes)); }, [testRecipes]);
+      useEffect(() => { if (sessionStorage.getItem('gelato-auth') === 'true') setIsAuth(true); const saved = localStorage.getItem('gelato-recipes-v5.4'); const savedTest = localStorage.getItem('gelato-test-recipes-v5.4'); setRecipes(saved ? JSON.parse(saved) : DEFAULT_RECIPES); setTestRecipes(savedTest ? JSON.parse(savedTest) : DEFAULT_TEST_RECIPES); }, []);
+      useEffect(() => { if (recipes.length > 0) localStorage.setItem('gelato-recipes-v5.4', JSON.stringify(recipes)); }, [recipes]);
+      useEffect(() => { if (testRecipes.length > 0) localStorage.setItem('gelato-test-recipes-v5.4', JSON.stringify(testRecipes)); }, [testRecipes]);
       useEffect(() => { setCheckedIngredients(new Set()); }, [selected]);
       const showToast = (msg) => { setToast(msg); setTimeout(() => setToast(null), 2500); };
       const isTestTab = tab === 'test';
